--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content="">
 <meta name="keywords" content="html, css, javascript, jquery">
 <meta name="author" content="">
+<link rel="icon" href="vindoh.ico" type="image/x-icon" />
 <link rel="stylesheet" href="css/style_1.css">
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/animate.min.css">
@@ -41,25 +42,7 @@
 <div class="col-md-5 text-right">
 <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
 <li class="has-children">
-<a href="#home-section" class="nav-link">Home</a>
-<ul class="dropdown">
-<li>
-<a href="index.html">Hero Image BG</a>
-</li>
-<li>
-<a href="index-video.html">Video BG</a>
-</li>
-<li>
-<a href="index-hero-slider.html">Hero Slider</a>
-</li>
-<li>
-<a href="index-sidebar-menu.html">Sidebar Menu</a>
-</li>
-<li>
-<a href="index-right-menu.html">Right Menu</a>
-</li>
-</ul>
-</li>
+<li><a href="#home-section" class="nav-link">Home</a></li>
 <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
 <li><a href="#about-section" class="nav-link">About</a></li>
 <li><a href="#services-section" class="nav-link">Services</a></li>
@@ -71,8 +54,6 @@
 <div class="col-md-5 text-right text-lg-left">
 <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
 <li><a href="#skills-section" class="nav-link">Skills</a></li>
-<li><a href="#testimonial-section" class="nav-link">Testimonial</a></li>
-<li><a href="#journal-section" class="nav-link">Journal</a></li>
 <li><a href="#contact-section" class="nav-link">Contact</a></li>
 </ul>
 <ul class="site-nav-ul-none-onepage text-right d-inline-block d-lg-none">
@@ -434,7 +415,7 @@ Your message was sent, thank you!
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-md-7">
-<div class="footer-site-logo"><a href="#">Unfold<span>.</span></a></div>
+<div class="footer-site-logo"><a href="#">vindoh<span>.</span></a></div>
 <ul class="footer-site-social">
 <li><a href="#">Facebook</a></li>
 <li><a href="#">Twitter</a></li>
