--- a/index.html
+++ b/index.html
@@ -411,114 +411,91 @@
 
 
 <div class="unslate_co--section" id="contact-section">
-<div class="container">
-<div class="section-heading-wrap text-center mb-5">
-<h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Get In Touch</span></h2>
-<span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
-</div>
-
-
-<div class="flex items-center justify-center h-screen">
-  <div class="flex flex-col items-center">
-      <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#142c3e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plug mb-4">
-          <path d="M12 22v-5"></path>
-          <path d="M9 8V2"></path>
-          <path d="M15 8V2"></path>
-          <path d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"></path>
-      </svg>
-      <a href="mailto:vincent.doh@outlook.com" class="btn">Send Message</a>
+  <div class="container">
+  <div class="section-heading-wrap text-center mb-5">
+  <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Get In Touch</span></h2>
+  <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>
   </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div> 
-<footer class="unslate_co--footer unslate_co--section">
-<div class="container">
-<div class="row justify-content-center">
-<div class="col-md-7">
-<div class="footer-site-logo"><a href="#">vindoh<span>.</span></a></div>
-
-
-
-
-
   
-
-
-
-<ul class="footer-site-social">
-
-
-  
-</ul>
-</div>
-</div>
-</div>
-
-
-<div class="container">
-  <div class="social-icons-container">
-      <a href="https://github.com/vin-doh/" class="social-icon">
+  <div class="xelf flex-col items-center">
+    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#142c3e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="luside luside-plug mb-4">
+        <path d="M12 22v-5"></path>
+        <path d="M9 8V2"></path>
+        <path d="M15 8V2"></path>
+        <path d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"></path>
+    </svg>
+    <a href="mailto:vincent.doh@outlook.com" class="btn">Send Message</a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div> 
+  <footer class="unslate_co--footer unslate_co--section">
+  <div class="container">
+  <div class="row justify-content-center">
+  <div class="col-md-7">
+  <div class="footer-site-logo"><a href="#">vindoh<span>.</span></a></div>
+  <ul class="footer-site-social">
+    <div class="container">
+      <div class="social-icons-container">
+        <a href="https://github.com/vin-doh/" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github">
-              <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path>
-              <path d="M9 18c-4.51 2-5-2-7-2"></path>
+            <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path>
+            <path d="M9 18c-4.51 2-5-2-7-2"></path>
           </svg>
-      </a>
-      <a href="https://www.linkedin.com/in/vincent-doh/" class="social-icon">
+        </a>
+        <a href="https://www.linkedin.com/in/vincent-doh/" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin">
-              <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-              <rect width="4" height="12" x="2" y="9"></rect>
-              <circle cx="4" cy="4" r="2"></circle>
+            <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+            <rect width="4" height="12" x="2" y="9"></rect>
+            <circle cx="4" cy="4" r="2"></circle>
           </svg>
-      </a>
-      <a href="mailto:vincent.doh@outlook.com" class="social-icon">
+        </a>
+        <a href="mailto:vincent.doh@outlook.com" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail">
-              <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-              <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+            <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+            <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
           </svg>
-      </a>
-      <a href="https://twitter.com/" class="social-icon">
+        </a>
+        <a href="https://twitter.com/" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-twitter">
-              <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
+            <path d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"></path>
           </svg>
-      </a>
-      <a href="https://www.instagram.com/vin__doh/" class="social-icon">
+        </a>
+        <a href="https://www.instagram.com/vin__doh/" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-instagram">
-              <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-              <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-              <line x1="17.5" x2="17.51" y1="6.5" y2="6.5"></line>
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+            <line x1="17.5" x2="17.51" y1="6.5" y2="6.5"></line>
           </svg>
-      </a>
-  </div>
-  <div class="copyright-text">
+        </a>
+      </div>
+  </ul>
+  <p class="site-copyright">
+    <div class="copyright-text">
       <h5>© <script>document.write(new Date().getFullYear());</script> All rights Reserved. <a href="/">Site made with</a> <span style="color: red; font-size: 14px;">&#10084;</span> <a href="/">by vindoh.</a> </h5>
+    </div>
   </div>
-</div>
-
-
-
-
-</footer>
-</div>
-
-<div id="unslate_co--overlayer"></div>
-<div class="site-loader-wrap">
-<div class="site-loader"></div>
-</div>
-
-<script src="js/scripts-dist.js"></script>
-<script src="js/main.js"></script>
-
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-23581568-13');
-</script>
-<script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" data-cf-beacon="{" rayid":"89392b73bc64670c","version":"2024.4.1","token":"cd0b4b3a733644fc843ef0b185f98241"}"="" crossorigin="anonymous"></script>
-
-</body></html>
+  </div>
+  </div>
+  </footer>
+  </div>
+  
+  <div id="unslate_co--overlayer"></div>
+  <div class="site-loader-wrap">
+  <div class="site-loader"></div>
+  </div>
+  <script src="js/scripts-dist.js"></script>
+  <script src="js/main.js"></script>
+  
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-23581568-13');
+  </script>
+  <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" data-cf-beacon="{" rayid":"89392b73bc64670c","version":"2024.4.1","token":"cd0b4b3a733644fc843ef0b185f98241"}"="" crossorigin="anonymous"></script>
+  
+  </body></html>
