index & images modified

--- a/index.html
+++ b/index.html
@@ -348,60 +348,48 @@
         <span class="icon-name">Figma</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="https://framerusercontent.com/images/kdLvgcoOGEgPNquojJ7MG3Isc.png" alt="Photoshop" title="Photoshop">
+        <span class="icon-name">Photoshop</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="https://seeklogo.com/images/A/adobe-illustrator-logo-775FAF240B-seeklogo.com.png" alt="Ilustrator" title="Ilustrator">
+        <span class="icon-name">Ilustrator</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="https://seeklogo.com/images/A/adobe-xd-logo-39468DE5D4-seeklogo.com.png" alt="AdobeXD" title="AdobeXD">
+        <span class="icon-name">Adobe XD</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="https://seeklogo.com/images/A/adobe-indesign-logo-F764EEC2F9-seeklogo.com.png" alt="Indesign" title="Indesign">
+        <span class="icon-name">Indesign</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="images/canva.gif" alt="Canva" title="Canva">
+        <span class="icon-name">Canva</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="images/pinterest.jpg" alt="Pinterest" title="Pinterest">
+        <span class="icon-name">Pinterest</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="images/coreldraw.jpg" alt="Coreldraw" title="Coreldraw">
+        <span class="icon-name">Coreldraw</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="images/sketch.jpg" alt="Sketch" title="Sketch">
+        <span class="icon-name">Sketch</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="https://framerusercontent.com/images/TbtspA7KXhdNiY9lmRCWVlneQ2w.png" alt="Miro" title="Miro">
+        <span class="icon-name">Miro</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="https://framerusercontent.com/images/1PgmSu9LNwaa3JzSGgiFr1sdw9M.png" alt="Spline" title="Spline">
+        <span class="icon-name">Spline</span>
       </div>
       <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
-      </div>
-      <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
-      </div>
-      <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
-      </div>
-      <div class="icon-container">
-        <img src="https://framerusercontent.com/images/wW33etq1EFwQ99eLu65fj79eg.png" alt="Figma" title="Figma">
-        <span class="icon-name">Figma</span>
+        <img src="images/blender.jpg" alt="Blender" title="Blender">
+        <span class="icon-name">Blender</span>
       </div>
       <!-- Add more icons as needed -->
     </div>
