--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="keywords" content="html, css, javascript, jquery">
 <meta name="author" content="">
 <link rel="icon" href="vindoh.ico" type="image/x-icon" />
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/style_1.css">
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/animate.min.css">
@@ -70,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A Product Designer based in 143-Amavin.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated Product Designer with a passion and curiousity for creativity.</h2>
 </div>
 </div>
 </div>
@@ -220,9 +221,13 @@
 </figure>
 </div>
 <div class="col-lg-4 pr-lg-5">
-<h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
-<p class="lead gsap-reveal">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there <a href="#">live the blind</a> texts. </p>
-<p class="mb-4 gsap-reveal">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+<h3 class="mb-4 heading-h3"><span class="gsap-reveal">MY BACKGROUND</span></h3>
+<p class="lead gsap-reveal">Growing up as the Kid Artist, my home was a fusion of creativity and analytical thinking, influenced by my father's career as a chef and my mother's profession as a seamstress. This unique blend <a href="#">blend</a> has deeply shaped my perspective. </p>
+<p class="mb-4 gsap-reveal">My fascination with technology began at age four, sparked by our trusty beige computer. My passion lies in the transformative power of great design, mainly inspired by the craftsmanship behind Pinterest products.</p>
+<p class="mb-4 gsap-reveal">My curiosity led me to wonder: could I also create something that evokes this effect on people? Today, I apply my multidisciplinary design skills to create solutions that make people feel and remember, elevating everyday experiences into inspiring ones. I focus on creating functional, user-centered digital products with visually stunning designs.</p>
+<body style="margin: 0; padding: 0; height: 100vh; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center;">
+  <p class="mb-4 gsap-reveal" style="font-family: 'Great Vibes', cursive; font-size: 48px; transform: rotate(-5deg); text-align: right; width: 100%;">vindoh.</p>
+</body><br>
 <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
 </div>
 </div>
@@ -348,12 +353,16 @@
         <span class="icon-name">Figma</span>
       </div>
       <div class="icon-container">
+        <img src="images/sketch.jpg" alt="Sketch" title="Sketch">
+        <span class="icon-name">Sketch</span>
+      </div>
+      <div class="icon-container">
         <img src="https://framerusercontent.com/images/kdLvgcoOGEgPNquojJ7MG3Isc.png" alt="Photoshop" title="Photoshop">
         <span class="icon-name">Photoshop</span>
       </div>
       <div class="icon-container">
         <img src="https://seeklogo.com/images/A/adobe-illustrator-logo-775FAF240B-seeklogo.com.png" alt="Ilustrator" title="Ilustrator">
-        <span class="icon-name">Ilustrator</span>
+        <span class="icon-name">Illustrator</span>
       </div>
       <div class="icon-container">
         <img src="https://seeklogo.com/images/A/adobe-xd-logo-39468DE5D4-seeklogo.com.png" alt="AdobeXD" title="AdobeXD">
@@ -374,10 +383,6 @@
       <div class="icon-container">
         <img src="images/coreldraw.jpg" alt="Coreldraw" title="Coreldraw">
         <span class="icon-name">Coreldraw</span>
-      </div>
-      <div class="icon-container">
-        <img src="images/sketch.jpg" alt="Sketch" title="Sketch">
-        <span class="icon-name">Sketch</span>
       </div>
       <div class="icon-container">
         <img src="https://framerusercontent.com/images/TbtspA7KXhdNiY9lmRCWVlneQ2w.png" alt="Miro" title="Miro">
