--- a/index.html
+++ b/index.html
@@ -225,9 +225,12 @@
 <p class="lead gsap-reveal">Growing up as the Kid Artist, my home was a fusion of creativity and analytical thinking, influenced by my father's career as a chef and my mother's profession as a seamstress. This unique blend <a href="#">blend</a> has deeply shaped my perspective. </p>
 <p class="mb-4 gsap-reveal">My fascination with technology began at age four, sparked by our trusty beige computer. My passion lies in the transformative power of great design, mainly inspired by the craftsmanship behind Pinterest products.</p>
 <p class="mb-4 gsap-reveal">My curiosity led me to wonder: could I also create something that evokes this effect on people? Today, I apply my multidisciplinary design skills to create solutions that make people feel and remember, elevating everyday experiences into inspiring ones. I focus on creating functional, user-centered digital products with visually stunning designs.</p>
-<body style="margin: 0; padding: 0; height: 100vh; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center;">
-  <p class="mb-4 gsap-reveal" style="font-family: 'Great Vibes', cursive; font-size: 48px; transform: rotate(-5deg); text-align: right; width: 100%;">vindoh.</p>
-</body><br>
+<div style="height: 1vh; display: flex; justify-content: flex-end; align-items: center;">
+  <div style="padding-right: 20px;">
+      <p class="mb-4 gsap-reveal" style="font-family: 'Great Vibes', cursive; font-size: 48px; transform: rotate(-5deg); text-align: right; margin: 0; color: white; background-color: transparent;">vindoh.</p>
+  </div>
+</div>
+<br>
 <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
 </div>
 </div>
