--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 </div>
 <div class="col-lg-4 pr-lg-5">
 <h3 class="mb-4 heading-h3"><span class="gsap-reveal">MY BACKGROUND</span></h3>
-<p class="lead gsap-reveal">Growing up as the Kid Artist, my home was a fusion of creativity and analytical thinking, influenced by my father's career as a chef and my mother's profession as a seamstress. This unique blend <a href="#">blend</a> has deeply shaped my perspective. </p>
+<p class="lead gsap-reveal">Growing up as the 'Kid Artist', my home was a fusion of creativity and analytical thinking, influenced by my father's career as a chef and my mother's profession as a seamstress. This unique <a href="#">blend</a> has deeply shaped my perspective. </p>
 <p class="mb-4 gsap-reveal">My fascination with technology began at age four, sparked by our trusty beige computer. My passion lies in the transformative power of great design, mainly inspired by the craftsmanship behind Pinterest products.</p>
 <p class="mb-4 gsap-reveal">My curiosity led me to wonder: could I also create something that evokes this effect on people? Today, I apply my multidisciplinary design skills to create solutions that make people feel and remember, elevating everyday experiences into inspiring ones. I focus on creating functional, user-centered digital products with visually stunning designs.</p>
 <div style="height: 1vh; display: flex; justify-content: flex-end; align-items: center;">
