--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 <div class="wrap-icon mb-3">
 <img src="images/001-options.svg" alt="Image" width="45">
 </div>
-<h3>Digital <br> Strategy</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+<h3>Product <br> Design</h3>
+<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
 <div class="col-md-6 col-lg-4 mb-4">
@@ -258,7 +258,7 @@
 <img src="images/002-chat.svg" alt="Icon" width="45">
 </div>
 <h3>Web <br> Design</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
 <div class="col-md-6 col-lg-4 mb-4">
@@ -267,7 +267,7 @@
 <img src="images/003-contact-book.svg" alt="Image" class="img-fluid" width="45">
 </div>
 <h3>User <br> Experience</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
 <div class="col-md-6 col-lg-4 mb-4">
@@ -276,7 +276,7 @@
 <img src="images/004-percentage.svg" alt="Image" width="45">
 </div>
 <h3>Web <br> Development</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
 <div class="col-md-6 col-lg-4 mb-4">
@@ -285,7 +285,7 @@
 <img src="images/006-goal.svg" alt="Image" width="45">
 </div>
 <h3>WordPress <br> Solutions</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
 <div class="col-md-6 col-lg-4 mb-4">
@@ -294,7 +294,7 @@
 <img src="images/005-line-chart.svg" alt="Image" width="45">
 </div>
 <h3>Mobile <br> Applications</h3>
-<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
+<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
 </div>
@@ -331,7 +331,7 @@
 <span class="number number-counter" data-number="95">0</span>
 <span class="append-text">%</span>
 </span>
-<span class="counter-label">jQuery</span>
+<span class="counter-label">Motion Design</span>
 </div>
 </div>
 <div class="col-6 col-sm-6 mb-5 mb-lg-0 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
@@ -469,7 +469,7 @@
   </ul>
   <p class="site-copyright">
     <div class="copyright-text">
-      <h5>© <script>document.write(new Date().getFullYear());</script> All rights Reserved. <a href="/">Site made with</a> <span style="color: red; font-size: 14px;">&#10084;</span> <a href="/">by vindoh.</a> </h5>
+      <h5>© <script>document.write(new Date().getFullYear());</script> All rights Reserved. Site made with</a> <span style="color: red; font-size: 14px;">&#10084;</span> by<a href="https://vin-doh.github.io/"> vindoh.</a> </h5>
     </div>
   </div>
   </div>
