--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-link2"></span>
 <div class="portfolio-item-content">
-<h3>Modern Building</h3>
-<p>branding, packaging</p>
+<h3>Artlike</h3>
+<p>building, world</p>
 </div>
 </div>
 <img src="images/work_3_md.jpg" class="lazyload  img-fluid" alt="Images">
