--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
-<h3>Modern Building</h3>
-<p>branding, packaging</p>
+<h3>Beach</h3>
+<p>branding, nature</p>
 </div>
 </div>
 <img src="images/work_7_a_md.jpg" class="lazyload  img-fluid" alt="Images">
@@ -194,8 +194,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
-<h3>Render Packaging</h3>
-<p>web, illustration</p>
+<h3>Foodie</h3>
+<p>build, healthy</p>
 </div>
 </div>
 <img src="images/work_9_a_md.jpg" class="lazyload  img-fluid" alt="Images">
