--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <p>web, branding</p>
 </div>
 </div>
-<img src="images/work_6_md.jpg" class="lazyload  img-fluid" alt="Images">
+<img src="images/work_6_md.gif" class="lazyload  img-fluid" alt="Images">
 </a>
 </div>
 <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
