--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
 </a>
 </div>
 <div class="item web packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-<a href="images/work_4_full.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Watch">
+<a href="images/work_4_full.gif" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Watch">
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
 <h3>Watch</h3>
-<p>web, packaging</p>
+<p>web, animation</p>
 </div>
 </div>
-<img src="images/work_4_full.jpg" class="lazyload  img-fluid" alt="Images">
+<img src="images/work_4_full.gif" class="lazyload  img-fluid" alt="Images">
 </a>
 </div>
 <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
@@ -146,7 +146,7 @@
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
-<h3>Shoe Rebranding</h3>
+<h3>Cube</h3>
 <p>illustration, packaging</p>
 </div>
 </div>
@@ -182,11 +182,11 @@
 <div class="overlay">
 <span class="wrap-icon icon-play_circle_filled"></span>
 <div class="portfolio-item-content">
-<h3>Showreel 2019</h3>
-<p>web, branding</p>
+<h3>Showreel</h3>
+<p>motion, branding</p>
 </div>
 </div>
-<img src="images/work_8_md.jpg" class="lazyload  img-fluid" alt="Images">
+<img src="images/work_8_md.gif" class="lazyload  img-fluid" alt="Images">
 </a>
 </div>
 <div class="item web illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
