--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   </div>
 </div>
 <br>
-<p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
+<p class="gsap-reveal"><a href="VincentDoh_Resume.pdf" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
 </div>
 </div>
 </div>
