--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>Vincent Doh Product Design Portfolio</title>
+<title>Vincent Doh UI/UX Design Portfolio</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
@@ -71,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A self-motivated Product Designer with a passion and curiousity for creativity.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated UI/UX Designer with a passion and curiousity for creativity.</h2>
 </div>
 </div>
 </div>
