--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A self-motivated UI/UX Designer with a passion and curiousity for creativity.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated UI/UX Designer with a passion and curiosity for creativity.</h2>
 </div>
 </div>
 </div>
@@ -110,7 +110,7 @@
 <div class="overlay">
 <span class="wrap-icon icon-link2"></span>
 <div class="portfolio-item-content">
-<h3>Reworking</h3>
+<h3>Artlike</h3>
 <p>branding, packaging, illustration</p>
 </div>
 </div>
@@ -122,7 +122,7 @@
 <div class="overlay">
 <span class="wrap-icon icon-link2"></span>
 <div class="portfolio-item-content">
-<h3>Artlike</h3>
+<h3>Web</h3>
 <p>building, world</p>
 </div>
 </div>
@@ -146,8 +146,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
-<h3>Cube</h3>
-<p>illustration, packaging</p>
+<h3>Cynteract</h3>
+<p>illustration, rehabilitation</p>
 </div>
 </div>
 <img src="images/work_5_md.jpg" class="lazyload  img-fluid" alt="Images">
@@ -158,8 +158,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-link2"></span>
 <div class="portfolio-item-content">
-<h3>Reshape</h3>
-<p>web, branding</p>
+<h3>MobileNex</h3>
+<p>mobile, branding</p>
 </div>
 </div>
 <img src="images/work_6_md.jpg" class="lazyload  img-fluid" alt="Images">
@@ -170,8 +170,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
-<h3>Beach</h3>
-<p>branding, nature</p>
+<h3>Mobileshape</h3>
+<p>branding, experiences</p>
 </div>
 </div>
 <img src="images/work_7_a_md.jpg" class="lazyload  img-fluid" alt="Images">
@@ -194,8 +194,8 @@
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
-<h3>Foodie</h3>
-<p>build, healthy</p>
+<h3>User-Centric</h3>
+<p>build, futuristic</p>
 </div>
 </div>
 <img src="images/work_9_a_md.jpg" class="lazyload  img-fluid" alt="Images">
