--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </a>
 </div>
 <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-<a href="images/work_5_md.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Shoe Rebranding">
+<a href="images/work_5_md.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="GmbH Rebranding">
 <div class="overlay">
 <span class="wrap-icon icon-photo2"></span>
 <div class="portfolio-item-content">
