--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A self-motivated WEB Developer & a SEO Specialist with a passion and curiosity for creativity.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated WEB Developer/SEO Specialist with a passion and curiosity for creativity.</h2>
 </div>
 </div>
 </div>
