--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>Vincent Doh Social Media Manager Portfolio</title>
+<title>Vincent Doh | Frontend Dev Portfolio</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
@@ -71,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A self-motivated Social Media Manager with a passion and curiosity for creativity.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated Frontend Developer with a passion and curiosity for creativity.</h2>
 </div>
 </div>
 </div>
@@ -420,7 +420,7 @@
         <path d="M15 8V2"></path>
         <path d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"></path>
     </svg>
-    <a href="mailto:vincent.doh@outlook.com" class="btn">Send Message</a>
+    <a href="mailto:hi.vindoh@gmail.com" class="btn">Send Message</a>
   </div>
   </div>
   </div>
@@ -447,7 +447,7 @@
             <circle cx="4" cy="4" r="2"></circle>
           </svg>
         </a>
-        <a href="mailto:vincent.doh@outlook.com" class="social-icon">
+        <a href="mailto:hi.vindoh@gmail.com" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail">
             <rect width="20" height="16" x="2" y="4" rx="2"></rect>
             <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
