--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <div class="wrap-icon mb-3">
 <img src="images/001-options.svg" alt="Image" width="45">
 </div>
-<h3>Product <br> Design</h3>
+<h3>Frontend <br> Development</h3>
 <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
