--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>Vincent Doh | Frontend Dev Portfolio</title>
+<title>Vincent Doh | V-Design Portfolio</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
@@ -71,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A self-motivated Frontend Developer with a passion and curiosity for creativity.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated Designer & a Developer with a passion and curiosity for creativity.</h2>
 </div>
 </div>
 </div>
@@ -248,7 +248,7 @@
 <div class="wrap-icon mb-3">
 <img src="images/001-options.svg" alt="Image" width="45">
 </div>
-<h3>Frontend <br> Development</h3>
+<h3>Product<br> Design</h3>
 <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
