--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="col-md-7 mx-auto text-center">
 <h2 class="subheading gsap-reveal-hero">Hi there, call me</h2>
 <h1 class="heading gsap-reveal-hero">Vincent Doh</h1>
-<h2 class="subheading gsap-reveal-hero">A self-motivated Designer & a Developer with a passion and curiosity for creativity.</h2>
+<h2 class="subheading gsap-reveal-hero">A self-motivated Digital Designer & a Developer with a passion and curiosity for creativity.</h2>
 </div>
 </div>
 </div>
@@ -248,7 +248,7 @@
 <div class="wrap-icon mb-3">
 <img src="images/001-options.svg" alt="Image" width="45">
 </div>
-<h3>Product<br> Design</h3>
+<h3>Digital<br>Design</h3>
 <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
@@ -469,7 +469,7 @@
   </ul>
   <p class="site-copyright">
     <div class="copyright-text">
-      <h5>© <script>document.write(new Date().getFullYear());</script> All rights Reserved. Site made with</a> <span style="color: red; font-size: 14px;">&#10084;</span> by<a href="https://vin-doh.github.io/"> vindoh.</a> </h5>
+      <h5>© <script>document.write(new Date().getFullYear());</script> All rights Reserved. Site made with</a> <span style="color: red; font-size: 14px;">&#10084;</span> by<a href="https://vin-doh.github.io/vdesign/"> vindoh.</a> </h5>
     </div>
   </div>
   </div>
