--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <path d="M15 8V2"></path>
         <path d="M18 8v5a4 4 0 0 1-4 4h-4a4 4 0 0 1-4-4V8Z"></path>
     </svg>
-    <a href="mailto:hi.vindoh@gmail.com" class="btn">Send Message</a>
+    <a href="mailto:vincent.doh@hotmail.com" class="btn">Send Message</a>
   </div>
   </div>
   </div>
@@ -440,14 +440,14 @@
             <path d="M9 18c-4.51 2-5-2-7-2"></path>
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/vincent-doh/" class="social-icon">
+        <a href="https://www.linkedin.com/in/vincent-doh-81a7b92b8/" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin">
             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
             <rect width="4" height="12" x="2" y="9"></rect>
             <circle cx="4" cy="4" r="2"></circle>
           </svg>
         </a>
-        <a href="mailto:hi.vindoh@gmail.com" class="social-icon">
+        <a href="mailto:vincent.doh@hotmail.com" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail">
             <rect width="20" height="16" x="2" y="4" rx="2"></rect>
             <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
