--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 <div class="wrap-icon mb-3">
 <img src="images/004-percentage.svg" alt="Image" width="45">
 </div>
-<h3>Web <br> Development</h3>
+<h3>Brand<br>Design</h3>
 <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p> -->
 </div>
 </div>
